# SherpaX

./: .gitattributes  .gitignore  .rustfmt.toml  404.html  Cargo.toml  Makefile  README.md  config.json  index.html  rust-toolchain
.github/workflows/: ci.yml  main.yml
assets/css/: 0.styles.9a05096d.css
assets/js/: 10.730e9d0f.js  11.e6a305c4.js  8.e7e263dc.js  app.b99c3b2b.js
cli/: README.md
config/: index.html
contracts/: AssetsBridgeAdaptor.sol  AssetsBridgeErc20_OnlyOwner.sol  AssetsBridgeErc20_istanbul.sol  BackForeign.sol  ENS.sol  ENSRegistry.sol  LuckyTreasure.sol  RedEnvelop.sol  SoSwapStaking.sol  SoSwapToken.sol  StakingContract.sol  UniswapV2Router02.sol  coming-nft.sol  erc20_istanbul.sol  precompile.sol  withdraw.sol  wksx_istanbul.sol
contracts/artifacts/: ERC20.json  ERC20_metadata.json  IERC20.json  IERC20_metadata.json  IUniswapV2Callee.json  IUniswapV2Callee_metadata.json  IUniswapV2ERC20.json  IUniswapV2ERC20_metadata.json  IUniswapV2Factory_metadata.json  IUniswapV2Pair_metadata.json  IUniswapV2Router01_metadata.json  IUniswapV2Router02_metadata.json  IWETH.json  IWETH_metadata.json  Math.json  Math_metadata.json  SafeMath.json  SafeMath_metadata.json  TransferHelper.json  TransferHelper_metadata.json  UQ112x112.json  UQ112x112_metadata.json  UniswapV2ERC20.json  UniswapV2ERC20_metadata.json  UniswapV2Factory.json  UniswapV2Factory_metadata.json  UniswapV2Library.json  UniswapV2Library_metadata.json  UniswapV2Pair.json  UniswapV2Pair_metadata.json  UniswapV2Router02.json  UniswapV2Router02_metadata.json  WKSX.json  WKSX_metadata.json
contracts/erc20-contracts/: README.md  address.txt  (+3 more)
develop_docs/: AssetsBridgeIntro.md  Ethereum-JSON-RPC.postman_collection.json  How to deploy a contract on the Sherpax testnet.md  Play around with the Sherpax asset module.md  uniswap deployment contract address.md  uniswap部署合约地址.md  如何在Sherpax测试网上部署合约.md  玩转Sherpax资产模块.md
docker/: ParaDockerfile  RelayDockerfile  build.sh  clear-contains.sh  docker-compose.yaml  regenerateConfig-rococo-local.sh  start-all.sh
migration/: Cargo.toml  build.rs
node/: Cargo.toml
node/res/: 2013-polkadot-v0.9.11.genesis  2013-polkadot-v0.9.11.wasm  btc_genesis_params_testnet.json  sherpax-raw.json  sherpax-testnet-raw.json
node/res/genesis_config/balances/: genesis_balances_chainx_snapshot_7418_7868415220855310000000000.json  genesis_balances_sherpax_contributors_1873_94046984872650000000000.json  non_zero_airdrop_18016_10500000000000000000000000.json
node/res/genesis_config/gateway/: btc_genesis_params_testnet.json  dogecoin_genesis_params_mainnet.json  dogecoin_genesis_params_testnet.json
node/res/genesis_config/vesting/: vesting_airdrop_18015_943318423258727000000000.json
node/res/transfer_config/: transfer_balances_1990_2631584779144690000000000.json  transfer_vesting_1990_2631584779144690000000000.json
node/src/: bitcoin.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/res/: bitcoin_testnet_genesis.json  dogecoin_testnet_genesis.json
pallets/deposit/: Cargo.toml
pallets/deposit/src/: lib.rs  mock.rs  tests.rs
pallets/ethereum-chain-id/: Cargo.toml
pallets/ethereum-chain-id/src/: lib.rs
pallets/pallet-coming-id/: Cargo.toml  README.md
pallets/pallet-coming-id/rpc/: Cargo.toml
pallets/pallet-coming-id/rpc/runtime-api/: Cargo.toml
pallets/pallet-coming-id/rpc/runtime-api/src/: lib.rs
pallets/pallet-coming-id/rpc/src/: lib.rs
pallets/pallet-coming-id/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  nft.rs  tests.rs  weights.rs
pallets/swap/: Cargo.toml  README.md
pallets/swap/rpc/: Cargo.toml
pallets/swap/rpc/runtime-api/: Cargo.toml
pallets/swap/rpc/runtime-api/src/: lib.rs
pallets/swap/rpc/src/: lib.rs
pallets/swap/src/: benchmarking.rs  lib.rs  mock.rs  multiasset.rs  rpc.rs  tests.rs  traits.rs  weights.rs
primitives/: Cargo.toml
primitives/assets-registrar/: Cargo.toml
primitives/assets-registrar/src/: lib.rs
primitives/gateway/bitcoin/: Cargo.toml
primitives/gateway/bitcoin/bridge/: Cargo.toml
primitives/gateway/bitcoin/bridge/src/: lib.rs
primitives/gateway/bitcoin/src/: detector.rs  extractor.rs  types.rs
primitives/gateway/common/: Cargo.toml
primitives/gateway/dogecoin/: Cargo.toml
primitives/gateway/dogecoin/src/: detector.rs  extractor.rs  lib.rs  types.rs
primitives/io/: Cargo.toml
primitives/io/src/: lib.rs
primitives/protocol/: Cargo.toml
primitives/protocol/src/: asset.rs
primitives/rpc/: Cargo.toml
primitives/runtime/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/basic/: Cargo.toml
runtime/basic/src/: constants.rs  lib.rs
runtime/common/: Cargo.toml
runtime/common/src/: genesis_config.rs  impls.rs  lib.rs
runtime/rococo/: Cargo.toml
runtime/rococo/src/: lib.rs
runtime/shell/: Cargo.toml
runtime/shell/src/: lib.rs
runtime/sherpax/: Cargo.toml
runtime/sherpax/src/: constants.rs  impls.rs  lib.rs  migration.rs  nft.rs  precompiles.rs  withdraw.rs
runtime/src/: constants.rs  lib.rs  zenlink.rs
runtime/src/weights/: frame_system.rs  mod.rs  pallet_balances.rs  pallet_multisig.rs  pallet_timestamp.rs  pallet_utility.rs
runtime/statemine/: Cargo.toml
runtime/statemine/src/: lib.rs
scripts/: checksum.sh  generate_weights.sh  remix.sh  srtool-build.sh  try-runtime.txt
snapshot-20230625/: accounts-15786.json  contracts-104.json  get_balance.py  sherpax_all_evm_addresses.csv  snapshot-ksx-722-1321035736476558552250982  snapshot-so-201-30742437668576114461941
xpallets/assets-bridge/: Cargo.toml  README.md
xpallets/assets-bridge/src/: abi.rs  lib.rs  mock.rs  recover.rs  tests.rs
xpallets/gateway/bitcoin/bridge/: Cargo.toml
xpallets/gateway/bitcoin/bridge/src/: ext.rs  lib.rs  traits.rs  types.rs
xpallets/gateway/records/: Cargo.toml
xpallets/gateway/records/rpc/: Cargo.toml
xpallets/gateway/records/rpc/runtime-api/: Cargo.toml
xpallets/gateway/records/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
xpallets/gateway/records/src/migrations/: genesis.rs
(+120 files in other folders)
