[workspace]
resolver = "2"

members = [
    "node",
    "primitives",
    "primitives/assets-registrar",
    "primitives/gateway/bitcoin",
    "primitives/gateway/dogecoin",
    "primitives/gateway/common",
    "primitives/io",
    "primitives/protocol",
    "primitives/rpc",
    "primitives/runtime",
    "runtime/sherpax",

    "xpallets/assets",
    "xpallets/assets-bridge",
    "xpallets/ethereum-chain-id",
    "xpallets/gateway/bitcoin",
    "xpallets/gateway/bitcoin/rpc",
    "xpallets/gateway/bitcoin/rpc/runtime-api",
    "xpallets/gateway/dogecoin",
    "xpallets/gateway/dogecoin/rpc",
    "xpallets/gateway/dogecoin/rpc/runtime-api",
    "xpallets/gateway/common",
    "xpallets/gateway/common/rpc",
    "xpallets/gateway/common/rpc/runtime-api",
    "xpallets/gateway/records",
    "xpallets/gateway/records/rpc",
    "xpallets/gateway/records/rpc/runtime-api",
    "xpallets/support",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
