[package]
name = "sherpax"
version = "1.0.0"
authors = ['The ChainX Authors']
edition = "2018"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "sherpax"

[dependencies]
structopt = "0.3.8"
jsonrpc-core = "18.0.0"
hex = "0.4"
hex-literal = "0.3.3"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.68"

# Substrate
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", features = ["wasmtime"] }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", features = ["wasmtime"] }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sc-service = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", features = ["wasmtime"] }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }

# These dependencies are used for the node template's RPCs
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sp-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }

# SherpaX
sherpax-runtime = { version = "1.0.0", path = "../runtime/sherpax" }

# EVM
futures = { version = "0.3", features = ["compat"] }
jsonrpc-pubsub = "18.0.0"
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
fp-consensus = { git = "https://github.com/chainx-org/frontier", branch = "new-polkadot-v0.9.11" }
fp-rpc = { git = "https://github.com/chainx-org/frontier", branch = "new-polkadot-v0.9.11" }
fc-consensus  = { git = "https://github.com/chainx-org/frontier", branch = "new-polkadot-v0.9.11" }
fc-rpc-core = { git = "https://github.com/chainx-org/frontier", branch = "new-polkadot-v0.9.11" }
fc-rpc = { git = "https://github.com/chainx-org/frontier", branch = "new-polkadot-v0.9.11" }
fc-mapping-sync = { git = "https://github.com/chainx-org/frontier", branch = "new-polkadot-v0.9.11" }
fc-db = { git = "https://github.com/chainx-org/frontier", branch = "new-polkadot-v0.9.11" }
pallet-ethereum = { git="https://github.com/chainx-org/frontier", branch = "new-polkadot-v0.9.11" }

# Cross Chain
sherpax-primitives = { path = "../primitives" }
xpallet-gateway-common-rpc = { path = "../xpallets/gateway/common/rpc" }
xpallet-gateway-common-rpc-runtime-api = { path = "../xpallets/gateway/common/rpc/runtime-api" }
xpallet-gateway-records-rpc = { path = "../xpallets/gateway/records/rpc" }
xpallet-gateway-records-rpc-runtime-api = { path = "../xpallets/gateway/records/rpc/runtime-api" }


[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }

[features]
default = []
runtime-benchmarks = [
    "sherpax-runtime/runtime-benchmarks",
]
