[package]
name = "sherpax"
version = "1.4.0"
authors = ['The ChainX Authors']
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "sherpax"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
jsonrpc-core = "18.0.0"
hex = "0.4"
hex-literal = "0.3.4"
maplit = "1.0.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

# Substrate
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", features = ["wasmtime"] }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", features = ["wasmtime"] }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sc-service = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", features = ["wasmtime"] }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }

# These dependencies are used for the node template's RPCs
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sp-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }

# SherpaX
sherpax-runtime = { path = "../runtime/sherpax" }

# EVM
futures = { version = "0.3", features = ["compat"] }
jsonrpc-pubsub = "18.0.0"
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
fp-consensus = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18" }
fp-rpc = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18" }
fp-storage = { git="https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18" }
fc-consensus  = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18" }
fc-rpc-core = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18" }
fc-rpc = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18", features = ["rpc_binary_search_estimate"] }
fc-mapping-sync = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18" }
fc-db = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18" }

# Cross Chain
sherpax-primitives = { path = "../primitives" }
xpallet-gateway-bitcoin-rpc = { path = "../xpallets/gateway/bitcoin/rpc" }
xpallet-gateway-bitcoin-rpc-runtime-api = { path = "../xpallets/gateway/bitcoin/rpc/runtime-api" }
xpallet-gateway-dogecoin-rpc = { path = "../xpallets/gateway/dogecoin/rpc" }
xpallet-gateway-dogecoin-rpc-runtime-api = { path = "../xpallets/gateway/dogecoin/rpc/runtime-api" }
xpallet-gateway-common-rpc = { path = "../xpallets/gateway/common/rpc" }
xpallet-gateway-common-rpc-runtime-api = { path = "../xpallets/gateway/common/rpc/runtime-api" }
xpallet-gateway-records-rpc = { path = "../xpallets/gateway/records/rpc" }
xpallet-gateway-records-rpc-runtime-api = { path = "../xpallets/gateway/records/rpc/runtime-api" }

# CLI-specific dependencies
try-runtime-cli = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", optional = true }

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }

[features]
default = []
runtime-benchmarks = [
    "sherpax-runtime/runtime-benchmarks",
]

# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["sherpax-runtime/try-runtime", "try-runtime-cli"]
