[package]
name = "dev-parachain-primitives"
version = "0.1.0"
authors = ["ChainX Developers"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-core = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }

[features]
default = [ "std" ]
std = [
	"sp-core/std",
	"sp-runtime/std",
]
