[package]
name = 'dev-parachain-runtime'
version = '0.1.0'
authors = ["ChainX Developers"]
edition = '2018'

[dependencies]
serde = { version = '1.0.119', optional = true, features = ['derive'] }
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }

# dev collator
dev-parachain-primitives = { path = '../primitives', default-features = false }

# Substrate dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
sp-core = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
sp-io = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
sp-inherents = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
sp-offchain = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
sp-session = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
sp-std = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
sp-version = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }


frame-executive = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
frame-system = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false, branch = 'polkadot-v0.9.1' }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
pallet-aura = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.1' }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = 'polkadot-v0.9.1' }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = 'polkadot-v0.9.1' }

# Cumulus dependencies
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus',  default-features = false, branch = 'polkadot-v0.9.1' }
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus',  default-features = false, branch = 'polkadot-v0.9.1' }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus',  default-features = false, branch = 'polkadot-v0.9.1' }
parachain-info = { git = 'https://github.com/paritytech/cumulus',  default-features = false, branch = 'polkadot-v0.9.1' }

# ChainX pallet
xpallet-gateway-bitcoin = { git = "https://github.com/chainx-org/ChainX", default-features = false, branch = "expose-bitcoin-genesis" }
xpallet-gateway-records = { git = "https://github.com/chainx-org/ChainX", default-features = false, branch = "expose-bitcoin-genesis" }
xpallet-gateway-bitcoin-v2 = { git = "https://github.com/chainx-org/ChainX", default-features = false, branch = "expose-bitcoin-genesis"}
xpallet-assets = { git = "https://github.com/chainx-org/ChainX",  default-features = false, branch = "expose-bitcoin-genesis" }
xpallet-assets-registrar = { git = "https://github.com/chainx-org/ChainX",  default-features = false, branch = "expose-bitcoin-genesis" }
chainx-primitives ={ git = "https://github.com/chainx-org/ChainX",  default-features = false, branch = "expose-bitcoin-genesis"}
xp-protocol ={ git = "https://github.com/chainx-org/ChainX",  default-features = false, branch = "expose-bitcoin-genesis" }
xp-gateway-bitcoin ={ git = "https://github.com/chainx-org/ChainX",  default-features = false, branch = "expose-bitcoin-genesis" }

pallet-swap = { path = "../pallets/swap", default-features = false }
pallet-swap-rpc-runtime-api = { path = "../pallets/swap/rpc/runtime-api", default-features = false }
orml-traits = { version = "0.4.0", default-features = false }

chainbridge = { git = "https://github.com/chainx-org/chainbridge-substrate", default-features = false, branch = "expose-bitcoin-genesis" }
assets-handler = { git = "https://github.com/chainx-org/chainbridge-substrate", default-features = false, branch = "expose-bitcoin-genesis" }

[build-dependencies]
substrate-wasm-builder = '3.0.0'

[features]
default = ['std']
std = [
	'codec/std',
	'serde',
	'dev-parachain-primitives/std',

	'sp-api/std',
	'sp-block-builder/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-io/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
	'frame-executive/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-balances/std',
	'pallet-randomness-collective-flip/std',
	'pallet-multisig/std',
	'pallet-sudo/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-utility/std',
	'pallet-aura/std',

	'cumulus-pallet-parachain-system/std',
	'cumulus-pallet-aura-ext/std',
	'cumulus-primitives-core/std',
	'parachain-info/std',

	'xp-gateway-bitcoin/std',
	'xpallet-gateway-bitcoin-v2/std',
	'xpallet-gateway-records/std',
	'xpallet-gateway-bitcoin/std',
	'xpallet-assets/std',
	'xpallet-assets-registrar/std',
	'chainx-primitives/std',

	'pallet-swap/std',
	'pallet-swap-rpc-runtime-api/std',
	'orml-traits/std',

	'chainbridge/std',
	'assets-handler/std',
]
