[package]
authors = ['Minix Chain Developer']
edition = '2018'
name = 'pallet-deposit'
version = "1.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "max-encoded-len"] }

sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9",default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9",default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9",default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9", default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9",default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9",default-features = false, optional = true }

pallet-coming-id = { version = "1.1.0", default-features = false, path = "../pallet-coming-id" }
pallet-evm = { git = "https://github.com/purestake/frontier", branch = "polkadot-v0.9.9", default-features = false }

[dev-dependencies]
hex = { version = "0.4.3" }
serde = { version = "1.0.119" }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9" }
sp-storage = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9" }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9" }

[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',

    'sp-runtime/std',
    'sp-std/std',
    'sp-core/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',

    'pallet-coming-id/std',
    'pallet-evm/std'
]

runtime-benchmarks = [
    "frame-benchmarking",
]

try-runtime = ["frame-support/try-runtime"]
