[package]
authors = ['Minix Chain Developer']
edition = "2018"
name = "pallet-ethereum-chain-id"
version = "1.0.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
serde = { version = "1.0.119", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.9" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.9" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "frame-support/std",
    "frame-system/std",
]
