[package]
authors = ['Minix Chain Developer']
edition = '2018'
name = 'pallet-coming-id'
version = "1.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
serde = { version = "1.0.119", optional = true }
hex-literal = { version = "0.3.1", optional = true }
log = { version = "0.4.14", default-features = false }

sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9",default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9",default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9",default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9", default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9",default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9",default-features = false, optional = true }

[dev-dependencies]
hex-literal = { version = "0.3.1" }
serde = { version = "1.0.119" }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9" }
sp-storage = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.9" }

[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',
    'log/std',

    'sp-runtime/std',
    'sp-std/std',
    'sp-core/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
]

runtime-benchmarks = [
    "frame-benchmarking",
    "hex-literal"
]

try-runtime = ["frame-support/try-runtime"]
