[package]
name = "xp-protocol"
version = "3.0.0"
authors = ["The ChainX Authors"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
serde = { version = "1.0.136", features = ["derive"], optional = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Substrate primitives
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

# ChainX primitives
sherpax-primitives = { path = "..", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "scale-info/std",
    # Substrate primitives
    "sp-runtime/std",
    # ChainX primitives
    "sherpax-primitives/std",
]
